--- a/demo_fastDFS/pom.xml
+++ b/demo_fastDFS/pom.xml
@@ -9,17 +9,14 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>pinyougou-common</artifactId>
+    <artifactId>demo_fastDFS</artifactId>
+
 
     <dependencies>
-        <!-- 文件上传组件 -->
         <dependency>
             <groupId>org.csource.fastdfs</groupId>
             <artifactId>fastdfs</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>commons-fileupload</groupId>
-            <artifactId>commons-fileupload</artifactId>
+            <version>1.2</version>
         </dependency>
     </dependencies>
 </project>
