--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>pinyougou-manager-web</module>
         <module>pinyougou-shop-web</module>
         <module>pinyougou-sellergoods-service</module>
+        <module>demo_fastDFS</module>
     </modules>
     <packaging>pom</packaging>
 
